--- a/frontend/frontend/src/app/calculator/mainapp/mainapp.component.css
+++ b/frontend/frontend/src/app/calculator/mainapp/mainapp.component.css
@@ -9,3 +9,11 @@
   background: #ecf0f3;
   box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
 }
+
+.brand-title {
+  margin-top: 0;
+  font-weight: 900;
+  font-size: 1.8rem;
+  color: #1DA1F2;
+  letter-spacing: 1px;
+}
