--- a/frontend/frontend/src/app/calculator/mainapp/mainapp.component.html
+++ b/frontend/frontend/src/app/calculator/mainapp/mainapp.component.html
@@ -1,4 +1,5 @@
 <div class="mainbody">
+    <div class="brand-title">Calculator</div>
     <app-calculator></app-calculator>
     <app-history></app-history>
 </div>
